--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
   <title>Doom Fire</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <script src="main.js"></script>
 </head>
 
 <body>
-
+  <div id="fireCanvas"></div>
+  <script src="main.js"></script>
 </body>
 
 </html>
